[gd_scene load_steps=2 format=2]

[ext_resource path="res://Submenus/Panel 2/Submenu Panel 2.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 157.0
margin_bottom = 14.0
text = "Panel 2 is also awesome"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 157.0
margin_bottom = 38.0

[node name="but_dec_myvar1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 17.0
margin_bottom = 20.0
text = "-"

[node name="lab_val_myvar1" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_top = 3.0
margin_right = 21.0
margin_bottom = 17.0

[node name="but_inc_myvar1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 25.0
margin_right = 45.0
margin_bottom = 20.0
text = "+"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/but_dec_myvar1" to="." method="_on_but_dec_myvar1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/but_inc_myvar1" to="." method="_on_but_inc_myvar1_pressed"]
